<resources>
    <string name="app_name" translatable="false">QReader</string>
    <string name="loading">Loading…</string>
    <string name="gallery">Gallery</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="send_code">Send code</string>
    <string name="contact">Contact us</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_preferences" translatable="false">PreferencesActivity</string>
    <string name="switch_camera_desc">Button that changes between cameras</string>
    <string name="toggle_flash_desc">Button that toggles the flash</string>
    <string name="zoom_in_desc">Button that zooms in</string>
    <string name="zoom_out_desc">Button that zooms out</string>
    <string name="decoded_link_text">Link decoded:</string>
    <string name="btn_is_favorite_desc">Button that sets the link as favorite or not</string>
    <string name="daisa_inc_desc" translatable="false">Daisa Inc. \ncompanydaisa@gmail.com</string>
    <string name="app_logo" translatable="false">App logo</string>
    <string name="enable_js_on_desc">JavaScript items will be loaded when opening a link</string>
    <string name="enable_js_off_desc">JavaScript items will not be loaded (eg: ads, menus…) when opening a link</string>
    <string name="enable_js_title">Enable JavaScript in the in app browser</string>
    <string name="save_camera_title">Save camera state</string>
    <string name="save_camera_on_desc">The last camera used will be saved</string>
    <string name="save_camera_off_desc">The last camera used will not be saved</string>
    <string name="app_logo_and_name">App logo and name</string>
    <string name="share_message">This app is great, you should check it out!!\n\n</string>
    <string name="choose_one">Choose one</string>
    <string name="email_subject">I love your app!!</string>
    <string name="company_email" translatable="false">companydaisa@gmail.com</string>
    <string name="barcode_with_errors">QR or Barcode with errors detected</string>
    <string name="barcode_checksum_failed">QR or Barcode checksum failed</string>
    <string name="barcode_not_found">QR or barcode not found</string>
    <string name="image_not_picked">You haven\'t picked an image</string>
    <string name="configue_failed">Configure failed</string>
    <string name="camera2_nor_supported">Camera2 API not supported on this device</string>
    <string name="camera_permissions_not_granted">Camera permissions not granted</string>
    <string name="store_permissions_not_granted">External storage permissions not granted</string>
    <string name="error_making_favorite">Error while updating status</string>
    <string name="link_added_to_favorites">Link added to favorites</string>
    <string name="link_deleted_from_favorites">Link deleted from favorites</string>
    <string name="link_not_added_to_favorites">Couldn\'t add link to favorites</string>
    <string name="none" translatable="false"></string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="showcase_gallery_desc">Desde aquí podrás escanear imágenes para obtener su código QR.\n\nDebes haber permitido el acceso al almacenamiento interno para que funcione</string>
    <string name="showcase_history_desc">Desde aquí podrás ver los links que hayas escaneado por si queremos volver a visitarlos en el navegador</string>
    <string name="showcase_favorites_desc">Desde aquí podrás ver tus links favoritos y tenerlos todos juntos</string>
    <string name="showcase_share_desc">Si te gusta nuestra aplicación, puedes compartirla con tus amigos desde aquí</string>
    <string name="showcase_contact_desc">Si tienes alguna duda, recomendación o te gusta tanto la aplicación que quieres decírnoslo, desde aquí podrás contactarnos a través del email</string>
    <string name="showcase_preferences_desc">Desde aquí podrás cambiar cosas de la aplicación para que se ajuste mejor a ti</string>
    <string name="showcase_switch_camera_title">Botón para cambiar la cámara</string>
    <string name="showcase_flash_title">Botón de flash</string>
    <string name="showcase_zoom_layout_title">Menú para el zoom</string>
    <string name="showcase_zoom_out_title">Botón para disminuir el zoom</string>
    <string name="showcase_zoom_bar_title">Barra de control del zoom</string>
    <string name="showcase_zoom_in_title">Botón para aumentar el zoom</string>
    <string name="showcase_switch_camera_desc">Sirve para alternar entre la cámara externa y la delantera</string>
    <string name="showcase_flash_desc">Sirve para encender y apagar el flash</string>
    <string name="showcase_zoom_layout_desc">Aquí se encuentran los elementos necesarios para cambiar el zoom de la forma que nos parezca más cómoda</string>
    <string name="showcase_zoom_out_desc">Cada vez que lo pulsemos reduciremos un poco el nivel del zoom</string>
    <string name="showcase_zoom_bar_desc">Podemos modificar el nivel del zoom deslizando el círculo por la barra</string>
    <string name="showcase_zoom_in_desc">Cada vez que lo pulsemos aumentaremos un poco el nivel del zoom</string>
    <string name="tooltip_drawer_content_text"><![CDATA[Y… con esto termina la presentación, esperamos que disfrutes de la aplicación y que escanees muchos códigos con ella :)<br><br>Puedes vover a reproducir la introducción cuando quieras desde el menú de preferencias]]></string>
    <string name="tooltip_presentation_content_text"><![CDATA[Bienvenid@ a QReader. Muchas gracias por tu descarga, ahora vamos a realizar una pequeña presentación para que conozcas un poco mejor cómo funciona esta app<br>Puedes avanzar en la presentación pulsando en el botón que pone siguiente on pulsando en cualquier otro sitio de la pantalla<br>Para terminar la presentación, pueder pulsar Terminar en cualquier momento]]></string>
    <string name="tooltip_presentation_end_content_text"><![CDATA[Estos son los elementos principales, pero si deslizas tu dedo desde la parte superior izquierda de la pantalla, encontrarás un menú para que puedas hacer muchas más cosas :)<br><br>Pulsa en cualquier sitio para terminar la presentación]]></string>
</resources>