<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Browser Configuration">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="enable_js"
            app:summaryOff="@string/enable_js_off_desc"
            app:summaryOn="@string/enable_js_on_desc"
            app:title="@string/enable_js_title"
            app:useSimpleSummaryProvider="true" />

        <!--<ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />
        -->

    </PreferenceCategory>

    <PreferenceCategory app:title="Camera Configuration">

        <SwitchPreferenceCompat
            app:key="save_last_camera"
            app:title="@string/save_camera_title"
            app:summaryOn="@string/save_camera_on_desc"
            app:summaryOff="@string/save_camera_off_desc"
            app:defaultValue="true"
            app:useSimpleSummaryProvider="true" />

        <!--<ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />
        -->

    </PreferenceCategory>

    <!--<PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    -->

</PreferenceScreen>